[project]
name = "rise-demo"
version = "0.1.0"
description = "A Jupyter Notebook demonstration of the RISE (Randomized Input Sampling for Explanation) algorithm."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scikit-image>=0.22.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.8",
]

[tool.uv]
package = false
